<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/rectangle"
        android:fontFamily="cursive"
        android:text="@string/main_logo"

        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="175dp"
        android:layout_height="180dp"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="115dp"
        app:srcCompat="@drawable/settings"
        tools:ignore="contentDescription" />

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_below="@+id/text_logo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username" />

    <ImageView
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_below="@+id/text_logo"
        app:srcCompat="@drawable/user"
        android:layout_marginTop="55dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"/>

    <ImageView
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_below="@+id/username"
        app:srcCompat="@drawable/padlock"
        android:layout_marginTop="55dp"
        android:layout_marginStart="10dp"/>
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/logoback"
        android:layout_below="@id/input_password"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:fontFamily="serif"
        android:layout_marginHorizontal="50dp"/>
    
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/question"
        android:layout_below="@id/login_button"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/create_account"
        android:layout_below="@id/question"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/text"/>


</RelativeLayout>